Change maxLandingPadSize type to integer
Modified maxLandingPadSize property across the application to use integer values instead of string. This includes changes in the database, entity classes, and filter classes. The update not only simplifies comparisons but should improve application performance on station queries.